2004-04-28  Ion Badulescu  <ionut@moisil.badula.org>

	Fixes for various memory management problems discovered by
	Rainer's purify run:

	* conf/transp/transp_tli.c (check_pmap_up): zero out struct
	timeval before using;
	(get_nfs_version): ditto

	* amd/map.c (umount_exported): make sure we don't try to free the
	same am_node multiple times, by setting its corresponding
	exported_ap slot to null

	* amd/get_args.c (get_version_string): a static pointer is pretty
	pointless, make it automatic

	* amd/conf.c (gopt_debug_options): remove unnecessary strdup();
	(gopt_log_options): ditto
	(gopt_print_version): free version string after using it

	* amd/autil.c (mf_mounted): free mntfs->mf_fo instead of leaking
	it

	* amd/amfs_generic.c (amfs_lookup_one_mntfs): use the CALLOC macro
	(amfs_lookup_mntfs): free def_opts on return

	* amd/amd.c (daemon_mode): zero out struct sigaction before using
	it;
	(main): ditto

2004-04-27  Ion Badulescu  <ionut@moisil.badula.org>

	* amd/amfs_generic.c (amfs_lookup_one_mntfs): force FS_MKMNT on
	the real mount of an autofs-based sublink

2004-04-25  Ion Badulescu  <ionut@moisil.badula.org>

	* amd/map.c (free_map_if_success): avoid dereferencing a pointer
	to potentially freed memory

2004-02-26  Erez Zadok  <ezk@cs.sunysb.edu>

	* minor new port: i386-unknown-freebsd5.2.1.

2004-01-30  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* scripts/ctl-hlfsd.in: don't run hlfsd with -D fork

2004-01-25  Erez Zadok  <ezk@cs.sunysb.edu>

	* minor new port: sparc64-unknown-linux-deb3.0

	* config.guess.long: recoognize Debian Linux.

2004-01-22  Erez Zadok  <ezk@cs.sunysb.edu>

	* conf/transp/transp_tli.c (amu_get_myaddress): use
	htonl(INADDR_LOOPBACK) and define INADDR_LOOPBACK if not already
	available.

2004-01-21  Erez Zadok  <ezk@cs.sunysb.edu>

	* wire-test/wire-test.c, hlfsd/hlfsd.c (main): pass NULL as second
	parameter to amu_get_myaddress().

	* conf/transp/transp_tli.c (amu_get_myaddress): resolve value of